# pandas_refactoring

./: .gitignore  README.md  before_black_main.py  pyproject.toml
tests/: test_calculate.py  test_data.csv  test_main.py  test_preprocessing.py  test_work.py
work/: Monthly_data.csv  calculate.py  main.py  preprocessing.py
