[tool.poetry]
name = "pandas_refactoring_test"
version = "0.1.0"
description = ""
authors = ["xxxxx <xxxx@xxxx.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.3"
pytest = "^6.2.5"
black = "^21.9b0"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
